--- a/config/locales/models/models_ja.yml
+++ b/config/locales/models/models_ja.yml
@@ -16,6 +16,11 @@ ja:
           password_confirmation: パスワード再入力
           created_at: 作成日
           updated_at: 更新日
+          employee_number: 社員番号
+          designated_work_start_time: 指定勤務開始時間
+          designated_work_end_time: 指定勤務終了時間
+          affiliation: 所属
+          uid: カードID
         attendance:
           worked_on: 日付
           started_at: 出社
