--- a/config/locales/models/models_ja.yml
+++ b/config/locales/models/models_ja.yml
@@ -55,5 +55,15 @@ ja:
           date_of_day_saturday: 土
           date_of_day_sunday: 日
           telephone_number: ご連絡先
-          
-          
+          monitoring_needs: 【居宅介護支援計画書の生活全般の解決すべき課題(ニーズ)】
+          monitoring_short_run_target: 【居宅介護支援計画書の短期目標】
+          monitoring_service_adl: 基本的サービスの状況(ADLを含む)
+          monitoring_exchange: ［他者交流］
+          monitoring_exchange_yes: 保たれている
+          monitoring_exchange_so_yes: ほぼ保たれている
+          monitoring_exchange_so_no: ほぼ保たれていない
+          monitoring_exchange_no: 保たれていない
+          monitoring_go_to_home: ［送迎］
+          monitoring_go_to_home_yes: 問題なし
+          monitoring_go_to_home_no: 問題あり
+          monitoring_go_to_home_no_reason: 問題あり理由
