--- a/config/locales/models/models_ja.yml
+++ b/config/locales/models/models_ja.yml
@@ -29,6 +29,7 @@ ja:
           nursing_number: 要介護
           date_of_day: 利用日
           telephone_number: ご連絡先
+          next: 次へ
         monitoring:
           monitoring_needs: 【居宅介護支援計画書の生活全般の解決すべき課題(ニーズ)】
           monitoring_short_run_target: 【居宅介護支援計画書の短期目標】
